chore(recovery): reconcile frozen backend baseline